// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidator has the expected html structure 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <img
                class="icon"
                src="~assets/images/cosmos-logo.png"
              />
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total Steak
                </h3>
                <h2>
                  0.00
                </h2>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
            <div
              class="bottom"
            >
              <div
                class="address"
                id="address"
              >
                
              </div>
              <div
                class="success"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
            <div
              class="tabs"
            />
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class=""
                    href="#/staking"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="anchor-copy"
                  >
                    <i
                      class="material-icons"
                    >
                      content_copy
                    </i>
                    
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <div
      class="validator-profile__header validator-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
      <div
        class="column validator-profile__header__info"
      >
        <div
          class="row validator-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="validator-profile__status-and-title"
            >
              <span
                class="validator-profile__status green"
              />
              <div
                class="validator-profile__header__name__title"
              >
                herr_schmidt_revoked
              </div>
            </div>
            <a
              class="anchor-copy validator-profile__header__name__address"
            >
              <i
                class="material-icons"
              >
                
              </i>
              …2b3c
            </a>
          </div>
          <div
            class="column validator-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="row validator-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              My Bonded Steak
            </dt>
            <dd>
              &lt; 0.01
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
          <div
            class="validator-profile__header__data__break"
          />
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
            <dd
              id="validator-profile__power"
            >
              65.52 %
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
            <dd
              id="validator-profile__uptime"
            >
              n/a %
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
            <dd
              id="validator-profile__commission"
            >
              0.05 %
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="validator-profile__details validator-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Owner
            </dt>
            <dd>
              1a2b3c
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
            <dd>
              www.schmidt.de
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
            <dd
              class="info_dl__text-box"
            >
              Herr Schmidt
            </dd>
          </dl>
        </div>
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
            <dd>
              0.05 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
            <dd>
              0.1 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Commission Change Today
            </dt>
            <dd>
              0.005 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
            <dd>
              0.01 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Self Bonded Steak
            </dt>
            <dd
              id="validator-profile__self-bond"
            >
              0 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Bonded Steak
            </dt>
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <!---->
    <!---->
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageValidator shows a default avatar 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <img
                class="icon"
                src="~assets/images/cosmos-logo.png"
              />
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total Steak
                </h3>
                <h2>
                  0.00
                </h2>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
            <div
              class="bottom"
            >
              <div
                class="address"
                id="address"
              >
                
              </div>
              <div
                class="success"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
            <div
              class="tabs"
            />
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class=""
                    href="#/staking"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="anchor-copy"
                  >
                    <i
                      class="material-icons"
                    >
                      content_copy
                    </i>
                    
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <div
      class="validator-profile__header validator-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
      <div
        class="column validator-profile__header__info"
      >
        <div
          class="row validator-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="validator-profile__status-and-title"
            >
              <span
                class="validator-profile__status green"
              />
              <div
                class="validator-profile__header__name__title"
              >
                herr_schmidt_revoked
              </div>
            </div>
            <a
              class="anchor-copy validator-profile__header__name__address"
            >
              <i
                class="material-icons"
              >
                
              </i>
              …2b3c
            </a>
          </div>
          <div
            class="column validator-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="row validator-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              My Bonded Steak
            </dt>
            <dd>
              &lt; 0.01
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
          <div
            class="validator-profile__header__data__break"
          />
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
            <dd
              id="validator-profile__power"
            >
              65.52 %
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
            <dd
              id="validator-profile__uptime"
            >
              n/a %
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
            <dd
              id="validator-profile__commission"
            >
              0.05 %
            </dd>
          </dl>
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="validator-profile__details validator-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Owner
            </dt>
            <dd>
              1a2b3c
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
            <dd>
              n/a
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
            <dd>
              www.schmidt.de
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
            <dd
              class="info_dl__text-box"
            >
              Herr Schmidt
            </dd>
          </dl>
        </div>
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
            <dd>
              0.05 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
            <dd>
              0.1 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Commission Change Today
            </dt>
            <dd>
              0.005 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
            <dd>
              0.01 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Self Bonded Steak
            </dt>
            <dd
              id="validator-profile__self-bond"
            >
              0 %
            </dd>
          </dl>
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Bonded Steak
            </dt>
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </main>
</div>
`;

exports[`PageValidator shows a validator as candidate if he has no voting_power 1`] = `"This validator has declared candidacy but does not have enough voting power yet"`;

exports[`PageValidator shows an error if the validator couldn't be found 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <!---->
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class=""
                    href="#/staking"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <!---->
    <tm-data-error />
  </main>
</div>
`;

exports[`PageValidator shows that a validator is revoked 1`] = `"This validator has been jailed and is not currently validating"`;

exports[`modalOptions always shows wallet in the first position 1`] = `
Array [
  Object {
    "address": "cosmosaccaddr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmosaccaddr…3p4mqpjyrm5ctpesxxn9",
    "maximum": 50,
    "value": 0,
  },
]
`;

exports[`modalOptions hides displayed validator if bonded 1`] = `
Array [
  Object {
    "address": "cosmosaccaddr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmosaccaddr…3p4mqpjyrm5ctpesxxn9",
    "maximum": 50,
    "value": 0,
  },
]
`;

exports[`modalOptions shows bonded validators for redelegation options 1`] = `
Array [
  Object {
    "address": "cosmosaccaddr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmosaccaddr…3p4mqpjyrm5ctpesxxn9",
    "maximum": 50,
    "value": 0,
  },
  Object {
    "address": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au",
    "key": "good_greg - cosmosvaladdr…3p4mqpjyrm5ctplpn3au",
    "maximum": 5,
    "value": 1,
  },
]
`;
